--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,37 @@
-server.port=8081
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=jounrnaldb
-spring.data.mongodb.auto-index-creation=true
+
+#server.port = 8082
+#spring.datasource.url=jdbc:mysql://localhost:3306/joural
+#spring.datasource.username=root
+#spring.datasource.password=root123
+#spring.jpa.show-sql=true
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl.auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#server.port=8082
+# DataSource configuration for MySQL
+#spring.datasource.url=jdbc:mysql://localhost:3306/joural?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=root123
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.main.allow-bean-definition-overriding=true
+
+# JPA / Hibernate settings
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+server.port=8082
+
+# DataSource configuration for MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/joural?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=root123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.open-in-view=false
+
+# JPA / Hibernate settings
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
